[package]
name = "autonomous-characters-3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1" }
bevy-inspector-egui = "0.14.0"
rand = "0.8.5"
bevy_egui = "0.18"
nalgebra = {version = "0.31.4", features = ["convert-glam022"]}
smooth-bevy-cameras = "0.6.0"
rayon = "1.6.1"
bevy_mod_picking = "0.11.0"